--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -14,6 +14,21 @@
   color: #F25116;
   font-weight: 600;
 }
+.brand,
+.navbar .nav-link {
+    color: #F2F2F2;
+    font-family: "Poppins", sans-serif;
+    font-size: 1rem;
+    font-weight: 500;
+    gap: 13px;
+    text-decoration: none;
+}
+.brand:hover,
+.navbar .nav-link:hover {
+    color: #F25116;
+    font-weight: 600;
+}
+
 .container-buttons-header {
     display: flex;
     align-items: center;
